--- a/src/styles/lanyard.css
+++ b/src/styles/lanyard.css
@@ -1,23 +1,27 @@
 @font-face {
     font-family: SevenSegment;
     font-style: normal;
-    font-display: swap;
-    src: url(fonts/SevenSegment.otf);
+    font-display: swap; /* Some older browsers might ignore this */
+    src: url(fonts/SevenSegment.otf) format("opentype");
 }
 
 #statusWrapper {
     list-style-type: none;
+    color: #000; /* Fallback for var(--text-color) */
+    color: rgb(0, 0, 0);
+    color: rgb(0, 0, 0);
     color: var(--text-color);
     font-family: Jost, sans-serif;
     padding: 8px;
     text-decoration: none;
     width: -moz-fit-content;
+    width: -webkit-fit-content;
     width: fit-content;
     height: -moz-fit-content;
+    height: -webkit-fit-content;
     height: fit-content;
     font-size: initial;
     transition: background-color .2s;
-    font-size: initial;
     touch-action: manipulation;
     border-radius: 12px;
     -webkit-appearance: none;
@@ -27,12 +31,11 @@
     display: block;
 }
 
-
 .divider {
+    border: solid 1px rgba(128, 128, 128, 0.4); /* Fallback for var(--accent-color) */
     border: solid 1px rgba(var(--accent-color), 0.4);
     width: 100%;
 }
-
 
 #lanyardDiscord {
     display: flex;
@@ -51,14 +54,13 @@
     margin-top: 12px;
 }
 
-#loadedLanyard>p,
+#loadedLanyard > p,
 #discordStatus,
 #activities {
     display: inline;
     text-align: center;
     color: rgb(188, 188, 188);
 }
-
 
 #dcNameContainer {
     align-items: center;
@@ -73,7 +75,7 @@
     margin-left: 12px;
 }
 
-section.project>p.dcProjectName {
+section.project > p.dcProjectName {
     color: white;
 }
 
@@ -82,18 +84,20 @@ section.project>p.dcProjectName {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    -webkit-backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px); /* Fallback for older browsers */
     backdrop-filter: blur(5px);
-    aspect-ratio: 16 / 9;
     width: 65vw;
+    height: auto; /* Fallback for aspect-ratio */
+    aspect-ratio: 16 / 9;
 }
 
-.img-holder>p {
+.img-holder > p {
     margin: 12px;
 }
 
-.img-holder>a {
+.img-holder > a {
     padding: 6px;
+    background-color: rgba(60, 60, 60, 0.30); /* Fallback for var(--darker-accent-color) */
     background-color: rgba(var(--darker-accent-color), 0.30);
 }
 
@@ -105,13 +109,11 @@ img {
 .dnd {
     background-color: #f94c5780;
     border: #f94c57 2px solid;
-    border: #f94c5780 2px solid;
     box-shadow: rgba(249, 76, 87, 0.50) 0px 0px 20px;
     transition: background-color 0.2s;
 }
 
 .dcloading {
-    background-color: #909090;
     background-color: #90909080;
     border: #90909080 2px solid;
     box-shadow: rgba(140, 140, 140, 0.50) 0px 0px 20px;
@@ -119,18 +121,14 @@ img {
 }
 
 .online {
-    background-color: #53d769;
     background-color: #53d76980;
-    border: #53d769 2px solid;
     border: #53d76980 2px solid;
     box-shadow: rgba(83, 215, 105, 0.50) 0px 0px 20px;
     transition: background-color 0.2s;
 }
 
 .idle {
-    background-color: #f2841d;
     background-color: #f2841d80;
-    border: #f2841d 2px solid;
     border: #f2841d80 2px solid;
     transition: background-color 0.2s;
 }
@@ -150,11 +148,16 @@ div#discord {
     padding: 8px;
     border-radius: 12px;
     margin: 12px;
+    color: #000; /* Fallback for var(--project-color) */
+    color: rgb(88, 88, 88);
     color: var(--project-color);
     text-align: center;
 }
 
 #discordNameUser {
+    color: #333; /* Fallback for var(--text-color) */
+    color: rgb(0, 0, 0);
+    color: rgb(0, 0, 0);
     color: var(--text-color);
     margin-bottom: 0px;
     padding-bottom: 0px;
@@ -168,7 +171,6 @@ div#discord {
 .discordPFP {
     border-radius: 10px;
 }
-
 
 #discordActivity {
     min-width: 15vw;
@@ -188,13 +190,11 @@ div#discord {
     transform: translate(-200%, 250%);
 }
 
-
 .discordName {
     display: flex;
 }
 
-
-div#loading>div {
+div#loading > div {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -217,6 +217,7 @@ div#loading>div {
     border: 8px solid #fff;
     border-radius: 50%;
     animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+    border-color: rgba(128, 128, 128, 0.8); /* Fallback for var(--accent-color) */
     border-color: rgb(var(--accent-color)) transparent transparent transparent;
 }
 
@@ -232,33 +233,41 @@ div#loading>div {
     animation-delay: -0.15s;
 }
 
-
 #activityName,
 #activityState,
 #activityDetails {
     text-align: left;
+    color: #000; /* Fallback for var(--project-color) */
+    color: rgb(88, 88, 88);
     color: var(--project-color);
 }
 
 #activityName {
+    color: #333; /* Fallback for var(--text-color) */
+    color: rgb(0, 0, 0);
+    color: rgb(0, 0, 0);
     color: var(--text-color);
 }
 
 #activityDetails {
+    color: #777; /* Fallback for var(--subtitle-color) */
     color: var(--subtitle-color);
 }
 
-#timeremaning>p {
+#timeremaning > p {
     text-align: inherit;
+    color: #000; /* Fallback for var(--project-color) */
+    color: rgb(88, 88, 88);
     color: var(--project-color);
 }
 
 #activityTime {
     display: inline;
+    color: #000; /* Fallback for var(--project-color) */
+    color: rgb(88, 88, 88);
     color: var(--project-color);
     font-family: SevenSegment, monospace, Jost, sans-serif;
 }
-
 
 #errorMessage {
     display: none;
@@ -268,6 +277,7 @@ div#loading>div {
 }
 
 .errorMessage {
+    color: #777; /* Fallback for var(--subtitle-color) */
     color: var(--subtitle-color);
 }
 
