--- a/src/styles/settings.css
+++ b/src/styles/settings.css
@@ -196,6 +196,7 @@ input[type="radio"]:checked+label {
     right: 0;
     bottom: 0;
     background-color: rgb(52, 52, 52);
+    background-color: #f1f1f1;
     background-color: var(--background-color);
     -webkit-transition: .4s;
     transition: .4s;
@@ -292,6 +293,7 @@ li>p {
 
 
 option {
+    background-color: #f1f1f1;
     background-color: var(--background-color);
     text-align: center;
 }
@@ -310,6 +312,7 @@ label {
 
 label,
 li>p {
+    color: rgb(88, 88, 88);
     color: var(--project-color);
 }
 
