--- a/src/styles.css
+++ b/src/styles.css
@@ -261,6 +261,8 @@ div.feature {
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    margin-top: 18px;
+    margin-bottom: 18px;
 }
 
 div.feature>div {
@@ -443,7 +445,6 @@ ul.specs {
 .button {
     background-color: rgba(60, 60, 60, 0.30);
     color: #cacaca;
-    margin-top: 25px;
     border: none;
     padding: 10px 20px;
     border-radius: 12px;
@@ -538,6 +539,30 @@ input[type="radio"] {
     width: 0;
 }
 
+.app-icon {
+    height: 128px;
+    width: 128px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    margin: auto;
+}
+
+.icon-background {
+    background-color: rgba(60, 60, 60, 0.30);
+    padding: 10px;
+    border-radius: 25%;
+    margin: auto;
+    height: 128px;
+    width: 128px;
+    color: #005bb5;
+    display: flex;
+    align-items: center;
+    justify-self: center;
+    justify-content: center;
+    font-size: 4em;
+}
 
 .options {
     display: flex;
@@ -552,6 +577,62 @@ input[type="radio"] {
 label.button, select.button{
     margin-top: 4px;
     margin-bottom: 4px;
+}
+
+.linkCompany {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 10px;
+}
+
+.linkCompany>a {
+    color: #cacaca
+}
+
+.linkCompany>a:hover {
+    color: #ffffff;
+    transition: color 0.2s;
+}
+
+#cookieBanner {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    background-color: rgba(60, 60, 60, 0);
+    padding: 10px;
+    border-radius: 8px;
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    z-index: 1000;
+    color: #cacaca;
+    border: none;
+    width: 100%;
+}
+
+.cookies {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--headerBgColor);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    width: fit-content;
+    border-radius: 12px;
+    padding: 12px;
+}
+
+.cookieTitle {
+    color: var(--appNameColor);
+}
+
+.cookies>button {
+margin-left: 12px;
 }
 
 /* Animations */
