--- a/src/styles.css
+++ b/src/styles.css
@@ -166,7 +166,7 @@ li.active>a {
 
 .app-name {
     font-size: 2em;
-    font-weight: bold;
+    font-weight: 550;
     color: var(--appNameColor);
     margin: 10px 0;
 }
@@ -185,7 +185,7 @@ li.active>a {
     padding: 10px 20px;
     border-radius: 25px;
     font-size: 1em;
-    font-weight: 500;
+    font-weight: 550;
     cursor: pointer;
     transition: background-color 0.3s;
     text-decoration: none;
@@ -245,7 +245,7 @@ li.active>a {
 .feature-title,
 h2 {
     font-size: 1.5em;
-    font-weight: bold;
+    font-weight: 550;
     color: var(--featureTitleColor);
     margin-bottom: 10px;
 }
@@ -449,7 +449,7 @@ ul.specs {
     padding: 10px 20px;
     border-radius: 12px;
     font-size: 1em;
-    font-weight: 500;
+    font-weight: 550;
     cursor: pointer;
     transition: background-color 0.3s;
     text-decoration: none;
@@ -458,6 +458,25 @@ ul.specs {
 
 .button:hover {
     background-color: #333333;
+}
+
+
+
+
+
+
+
+.fa-solid, .fa-brands, .fa-regular {
+    width: 1em;
+    margin-right: 10px;
+}
+
+span>i {
+    width: initial !important;
+}
+
+.linkCompany>i {
+    margin-right: 0px;
 }
 
 button>.fa-solid {
@@ -633,6 +652,44 @@ label.button, select.button{
 
 .cookies>button {
 margin-left: 12px;
+}
+
+.sosumi {
+    width: 80vw;
+    font-size: 1em;
+}
+
+h2 {
+    font-weight: 550;
+}
+
+li>a>i {
+    margin-right: 0px !important;
+}
+
+.contact {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 12px;
+    margin: 12px;
+    width: 100%;
+    color: white;
+}
+
+.contact>a {
+   color: inherit;
+}
+
+.twitter {
+    background-color: #1da1f2;
+}
+
+.discord {
+    background-color: #7289da;
 }
 
 /* Animations */
