--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -667,7 +667,7 @@ margin-left: 12px;
     font-size: 1em;
 }
 
-h2 {
+h2, h3 {
     font-weight: 550;
 }
 
@@ -745,6 +745,90 @@ li>a>i {
     border: none;
 }
 
+select {
+    appearance: none;
+    border: none;
+    cursor: pointer;
+}
+
+.checkbox-wrapper-51 {
+    display: flex;
+    align-items: center; /* Align items (label and toggle) vertically */
+  }
+  
+  .checkbox-wrapper-51 input[type="checkbox"] {
+    visibility: hidden;
+    display: none;
+  }
+  
+  .checkbox-wrapper-51 .toggle {
+    position: relative;
+    display: block;
+    cursor: pointer;
+    -webkit-tap-highlight-color: transparent;
+    transform: translate3d(0, 0, 0);
+  }
+  
+  .checkbox-wrapper-51 .toggle:before {
+    content: "";
+    position: relative;
+    top: 5px;
+    left: 1px;
+    width: 40px;
+    height: 22px;
+    display: inline-block;
+    background: var(--borderColor);
+    border-radius: 12px;
+    transition: background 0.2s ease;
+    margin-right: 4px;
+  }
+  
+  .checkbox-wrapper-51 .toggle span {
+    position: absolute;
+    top: 4;
+    left: 0;
+    width: 24px;
+    height: 24px;
+    display: block;
+    background: #cacaca;
+    border-radius: 50%;
+    transition: all 0.2s ease;
+  }
+  
+  .checkbox-wrapper-51 .toggle span svg {
+    margin: 7px;
+    fill: none;
+  }
+  
+  .checkbox-wrapper-51 .toggle span svg path {
+    stroke: var(--borderColor);
+    stroke-width: 2;
+    stroke-linecap: round;
+    stroke-linejoin: round;
+    stroke-dasharray: 24;
+    stroke-dashoffset: 0;
+    transition: all 0.5s linear;
+  }
+  
+  .checkbox-wrapper-51 input[type="checkbox"]:checked + .toggle:before {
+    background: var(--accent-color);
+  }
+  
+  .checkbox-wrapper-51 input[type="checkbox"]:checked + .toggle span {
+    transform: translateX(18px);
+  }
+  
+  .checkbox-wrapper-51 input[type="checkbox"]:checked + .toggle span path {
+    stroke: var(--accent-color);
+    stroke-dasharray: 25;
+    stroke-dashoffset: 25;
+  }
+  
+  /* Optional: Add spacing between the label and toggle */
+  .checkbox-wrapper-51 label {
+    margin-right: 10px;
+  }
+  
 /* Animations */
 @keyframes fadeIn {
     from {
