--- a/src/css/lanyard.css
+++ b/src/css/lanyard.css
@@ -99,7 +99,7 @@ section.project > p.dcProjectName {
 
 .img-holder > a {
     padding: 6px;
-    background-color: rgba(60, 60, 60, 0.30); /* Fallback for var(--darker-accent-color) */
+    background-color: var(--card-background-color); /* Fallback for var(--darker-accent-color) */
     background-color: rgba(var(--darker-accent-color), 0.30);
 }
 
@@ -195,9 +195,9 @@ div#discord {
 #amActivityLogoLarge {
     border-radius: 100%;
     animation-name: spin;
-    animation-duration: 5000ms;
+    animation-duration: 3000ms; 
     animation-iteration-count: infinite;
-    animation-timing-function: linear; 
+    animation-timing-function: linear;    
     /* transform: rotate(3deg); */
      /* transform: rotate(0.3rad);/ */
      /* transform: rotate(3grad); */ 
@@ -273,18 +273,13 @@ div#loading > div {
 #amActivityName,
 #amActivityDetails,
 #amActivityState {
-    color: #000; /* Fallback for var(--project-color) */
-    color: rgb(88, 88, 88);
-    color: var(--project-color);
+    color: var(--paragraph-color);
     margin-top: 12px;
 }
 
 #activityName,
 #amActivityName {
-    color: #333; /* Fallback for var(--text-color) */
-    color: rgb(0, 0, 0);
-    color: rgb(0, 0, 0);
-    color: var(--text-color);
+    color: var(--paragraph-color);
 }
 
 #activityDetails,
@@ -296,9 +291,7 @@ div#loading > div {
 #timeremaning > p,
 #amTimeremaning > p {
     text-align: inherit;
-    color: #000; /* Fallback for var(--project-color) */
-    color: rgb(88, 88, 88);
-    color: var(--project-color);
+    color: var(--paragraph-color);
 }
 
 #activityTime,
@@ -306,7 +299,7 @@ div#loading > div {
     display: inline;
     color: #000; /* Fallback for var(--project-color) */
     color: rgb(88, 88, 88);
-    color: var(--project-color);
+    color: var(--paragraph-color);
     font-family: SevenSegment, monospace, Jost, sans-serif;
 }
 
@@ -341,7 +334,7 @@ div#loading > div {
     margin: 12px;
     padding: 12px;
     border-radius: 12px;
-    background-color: rgba(60, 60, 60, 0.30); /* Fallback for var(--darker-accent-color) */
+    background-color: var(--card-background-color); /* Fallback for var(--darker-accent-color) */
 }
 
 
@@ -349,13 +342,13 @@ div#loading > div {
     text-align: left;
     width: 100%;
     margin-bottom: 12px;
-    color: #535353;
+    color: var(--paragraph-color);
 }
 
 i>h3{
     display: inline !important;
     margin-left: 0.2em;
-    font-weight: 550 !important;
+    font-weight: normal !important;
 }
 
 
@@ -369,7 +362,7 @@ i>h3{
     margin: 12px;
     padding: 12px;
     border-radius: 12px;
-    background-color: rgba(60, 60, 60, 0.30); /* Fallback for var(--darker-accent-color) */
+    background-color: var(--card-background-color); /* Fallback for var(--darker-accent-color) */
 }
 
 #discordActivityImages,
@@ -386,7 +379,7 @@ i>h3{
     position: relative;
     width: 100%;
     height: 3px;
-    background-color: #333;
+    background-color: var(--card-background-color);
     margin-top: 0.5em;
     margin-bottom: 0.5em;
     border-radius: 5px;
@@ -416,10 +409,10 @@ i>h3{
 }
 
 .titleColor{
-    color:#cacaca !important
+    color:var(--title-color);
 }
 .subtitleColor{
-    color:#979797 !important
+    color:var(--paragraph-color);
 }
 
 div#timeremaning,
@@ -435,7 +428,7 @@ div#amTimeremaning{
 div#timeremaning>p,
 div#amTimeremaning>p{
     padding: 0.2rem;
-    color: #979797;
+    color: var(--paragraph-color);
 }
 
 div.iconContainer{
@@ -453,11 +446,29 @@ div.iconContainer{
     margin: 12px;
     padding: 12px;
     border-radius: 12px;
-    background-color: rgba(60, 60, 60, 0.30); /* Fallback for var(--darker-accent-color) */
+    background-color: var(--card-background-color); /* Fallback for var(--darker-accent-color) */
 }
 
 .lanyard-logo{
     width: 92px;
     margin: 12px;
     border-radius: 12px;
+}
+
+.discord {
+    background-color: #7289da;
+}
+
+
+.discordWrapper {
+    background-color: unset;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 12px;
+    margin: 12px;
+    width: unset;
+    min-height: unset !important;
 }
